# PocketOptionAPI

./: .env_exemplo  LICENSE  README.md  pyproject.toml  requirements.txt
ferramentas/: api_enhanced.py
ferramentas_tests/: api_enhanced.py  api_performace.py
pocketoptionapi_async/: __init__.py  client.py  config.py  connection_keep_alive.py  connection_monitor.py  constants.py  exceptions.py  models.py  monitoring.py  utils.py  websocket_client.py
tools_exemplos_testes/: api_enhanced.py  api_extrair_id_ativos.py  api_performace.py  api_trade.py  api_trade_cf.py  api_verificar_ativos.py
tools_exempos_testes/: api_trade.py
tools_ferramentas/: get_cf_cookies.py  get_driver.py  get_endpoints.py  get_endpoints_for_env.py  get_ssid_demo.py  get_ssid_real.py
