[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketoptionapi-async"
version = "2.0.0"
description = "Async Python API não oficial para PocketOption (ByJhonesDev)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "ByJhonesDev", email = "noffearrdeathproject@gmail.com" }]
maintainers = [{ name = "ByJhonesDev", email = "noffearrdeathproject@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

# ==== CORE (runtime) ====
dependencies = [
  "websockets==11.0.3",
  "pydantic>=2,<3",
  "loguru>=0.7,<0.8",
  "python-dotenv>=1,<2",
  "psutil>=5,<8",
  "typing-extensions>=4,<5",
]

# ==== EXTRAS (opcionais) ====
[project.optional-dependencies]
tools = [
  "selenium>=4,<5",
  "webdriver-manager>=4,<5",
]
analysis = [
  "pandas>=2,<3",
  "numpy>=2,<3",
]
pretty = [
  "rich>=13,<15",
  "colorama>=0.4,<0.5",
]

[tool.setuptools]
packages = ["pocketoptionapi_async"]

[project.urls]
Homepage = "https://github.com/ByJhonesDev/PocketOptionAPI"
"Bug Tracker" = "https://github.com/ByJhonesDev/PocketOptionAPI/issues"
